Added title picture

--- a/cidr2017/index.html
+++ b/cidr2017/index.html
@@ -14,7 +14,7 @@
 
 <!-- The JavaScript Source!! http://javascript.internet.com -->
 
-<!-- Begin
+
 
 // Set up the image files to be used.
 
@@ -25,7 +25,7 @@ var theImages = new Array() // do not change this
 // pattern below, adding to the array.
 
 
-theImages[0] = 'img/asilomar2.jpg'
+theImages[0] = 'img/Property_Courtyard.jpg'
 
 // do not edit anything below this line
 
@@ -43,7 +43,6 @@ document.write('</div>');
 
 }
 
-//  End -->
 
 </script>
 
@@ -60,7 +59,7 @@ document.write('</div>');
 	</div>
 
 <!--
-	<img id="frontphoto" src="img/asilomar1.jpg" width="760" height="200" alt="" />
+	<img id="frontphoto" src="img/Property_Courtyard.jpg" width="760" height="200" alt="" />
 -->
 	<script language="JavaScript">
 	  
