--- a/cidr2017/index.html
+++ b/cidr2017/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="The 7th biennial Conference on Innovative Data Systems Research (CIDR 2015)" />
-	<meta name="keywords" content="CIDR 2015, Asilomar Conference, Innovative Data Systems Research" />
+	<meta name="description" content="The 8th biennial Conference on Innovative Data Systems Research (CIDR 2017)" />
+	<meta name="keywords" content="CIDR 2017, Asilomar Conference, Innovative Data Systems Research" />
 	<meta name="author" content="Jena Bakula" />
 	<link rel="stylesheet" type="text/css" href="andreas01.css" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-	<title>CIDR 2015</title>
+	<title>CIDR 2017</title>
 <script language="JavaScript">
 
 <!-- This script and many more are available free online at -->
@@ -54,8 +54,8 @@ document.write('</div>');
 <div id="wrap">
 
 	<div id="header">
-		<h1><a href="index.html">CIDR 2015</a></h1>
-		<p>January 4-7, 2015        <span style="padding-left:30px">  Asilomar, California</span></p>
+		<h1><a href="index.html">CIDR 2017</a></h1>
+		<p>January 8-11, 2017        <span style="padding-left:30px">  Chaminade, California</span></p>
 	</div>
 
 <!--
@@ -79,6 +79,8 @@ document.write('</div>');
 			<li><a href="http://www.visitasilomar.com">Venue Information</a></li>
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
+				<li><a href="http://www.cidrdb.org/cidr2015/index.html">
+                                         CIDR 2015</a></li>
 					<li><a href="http://www.cidrdb.org/cidr2013/index.html">
                                          CIDR 2013</a></li>
                                         <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
@@ -141,7 +143,7 @@ document.write('</div>');
 	<div id="footer">
 	  <p><span>&copy; 2012 <a href="index.html#">CIDR Conference</a></span><br />
 	    Template design by <a href="http://andreasviklund.com/">Andreas Viklund</a><br />
-	    Header pictures by <a href="http://people.epfl.ch/pinar.tozun">Pinar Tozun</a></p>
+	    Header pictures by <a href=""></a></p>
 	</div>
 
 </div>
