conference room picture

--- a/cidr2017/index.html
+++ b/cidr2017/index.html
@@ -113,7 +113,7 @@ document.write('</div>');
 		  The biennial Conference on Innovative Data Systems Research (CIDR) is a systems-oriented conference, complementary in its mission to the mainstream database conferences like SIGMOD and VLDB, emphasizing the systems architecture perspective. CIDR gathers researchers and practitioners from both academia and industry to discuss the latest innovative and visionary ideas in the field. 
 		<p>
 		  Papers are invited on novel approaches to data systems architecture and usage. <br>
-		  <img src="img/chapel.jpg" height="120" width="160" class="right" alt="Conference Venue" />
+		  <img src="img/confRoom.jpg" height="120" width="160" class="right" alt="Conference Venue" />
 		  CIDR mainly encourages papers about
 		  innovative and risky data management system architecture ideas, 
 		  systems-building experience and insight, 
