Added registration page

--- a/cidr2017/index.html
+++ b/cidr2017/index.html
@@ -75,8 +75,8 @@ document.write('</div>');
 			<li><a href="cfp.html">Call For Papers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="program.html">Program and Papers</a></li>
-			<li><a href="registration.html">Registration</a></li>
-			<li><a href="http://www.visitasilomar.com">Venue Information</a></li>
+			<li><a href="registration.html">Venue and Registration</a></li>
+<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
 				<li><a href="http://www.cidrdb.org/cidr2015/index.html">
@@ -123,7 +123,7 @@ document.write('</div>');
 
 				  
 		<p>
-		  After much soul searching, the organizers have elected to move the conference from Asilomar to Chaminade in Santa Cruz, Ca.  Chaminade is slightly cheaper, has better food, better rooms, and is 45 minutes closer to SFO.  Otherwise, the conference will be similar to past years with a single-tracked program of keynotes, paper and demo presentations, panels, a gong-show and plenty of time for interaction.
+		  After much soul searching, the organizers have elected to move the conference from Asilomar to Chaminade in Santa Cruz, CA.  Chaminade is slightly cheaper, has better food, better rooms, and is 45 minutes closer to SFO.  Otherwise, the conference will be similar to past years with a single-tracked program of keynotes, paper and demo presentations, panels, a gong-show and plenty of time for interaction.
 		  <p>
 		<h3>Important Dates</h3><b>(all deadlines are 11:59pm Pacific Time)</b>
 		<ul> 
