--- a/cidr2017/org.html
+++ b/cidr2017/org.html
@@ -25,9 +25,9 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="cfp.html">Call For Papers</a></li>
 			<li><a href="org.html">Organization</a></li>
-			<li><a href="program.html">Program and Papers</a></li>
-			<li><a href="registration.html">Registration</a></li>
-			<li><a href="http://www.visitasilomar.com">Venue Information</a></li>
+			<li><a href="program.html">Program and Papers</a></li>			
+			<li><a href="registration.html">Venue and Registration</a></li>
+<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
 				<li><a href="http://www.cidrdb.org/cidr2015/index.html">
