--- a/cidr2017/program.html
+++ b/cidr2017/program.html
@@ -26,8 +26,8 @@
 			<li><a href="cfp.html">Call For Papers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="program.html">Program and Papers</a></li>
-			<li><a href="registration.html">Registration</a></li>
-			<li><a href="http://www.visitasilomar.com">Venue Information</a></li>
+			<li><a href="registration.html">Venue and Registration</a></li>
+<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
 					<li><a href="http://www.cidrdb.org/cidr2015/index.html">CIDR 2015</a></li>
@@ -66,7 +66,7 @@
           <p>
 	  <b>Gongshow Awards:  will be announced here</b><p>
           
-	 <h3>CIDR 2015 Program: TENTATIVE/CHANGES POSSIBLE</h3>
+	 <h3>CIDR 2017 Program: TENTATIVE/CHANGES POSSIBLE</h3>
 TBD
 	  
 	 
