adapted the main index site

--- a/index.html
+++ b/index.html
@@ -209,6 +209,23 @@ CIDR
   <p class=MsoNormal><b>Website<o:p></o:p></b></p>
   </td>
  </tr>
+  <tr>
+  <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
+  border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>2017</p>
+  </td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+ <p class=MsoNormal><a href="cidr2017/cfp.html">Call for Papers</a></p></td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal><a href="cidr2017/index.html">2017 website</a></p>
+  </td>
+ </tr>
  <tr>
   <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
   border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
@@ -218,7 +235,7 @@ CIDR
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
   padding:0in 5.4pt 0in 5.4pt'>
- <p class=MsoNormal><a href="cidr2015/cfp.html">Call for Papers</a></p></td>
+  <p class=MsoNormal><a href="cidr2013/cidr2015proceedings.zip">2015 Proceedings (.zip)</a></p></td>
   <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
   none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
   mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
