Minor fixes, 4 page submission -> 6 pages submission

--- a/cidr2017/cfp.html
+++ b/cidr2017/cfp.html
@@ -76,14 +76,13 @@ CIDR 2013</a></li>
 <dl>
 	<dt>
 <strong>August 21, 2016</strong>: Submission deadline for all
-papers
+contributions
 	<dt>
-<strong>October 13, 2016</strong>: author notification for regular
-papers
+<strong>October 13, 2016</strong>: author notification for all contributions
 
 <dt>
 	<strong>November 21, 2016</strong>: camera-ready deadline for
-	regular papers
+	all contributions
 
 	<dt>
 <strong>January 8-11, 2017</strong>: conference
@@ -94,10 +93,9 @@ papers
 	<h3>Registration</h3>
 	<ul>
 <li><strong>Before October 27, 2016</strong>: early
-	registration for authors of abstracts and submitted papers.
+	registration for authors of abstracts and submitted papers and demos.
 	<li><strong>After October 27, 2016</strong>:
-registration on first come first serve basis until capacity
-filled.
+registration on first come first serve basis until capacity is reached.
 	</ul>
 
 
@@ -122,10 +120,10 @@ experience-based insight, and vision.
 
 <p>
 	This year, CIDR invites three kinds of contributions: (a)
-	papers (at most 4 pages). To encourage authors to submit
+	papers (at most 6 pages). To encourage authors to submit
 	only their best work, each person can be an author or
 	co-author of only a single paper or demo. (b) demos (a
-	video or a description of the demo in at most 4 pages).
+	video or a description of the demo in at most 6 pages).
 	Authors who feel their work is best captured through a demo
 	should submit a demo proposal. Demos and papers will be
 	interweaved in a single-tracked program. (c) abstracts (at
@@ -181,14 +179,13 @@ href="https://cmt.research.microsoft.com/CIDR2017">https://cmt.research.microsof
 		Submissions must be
 		formatted using the ACM SIG style. (see  <a
 		href="http://www.acm.org/sigs/publications/proceedings-templates">ACM
-		Template</a>), and must not exceed FOUR pages (for papers
+		Template</a>), and must not exceed SIX pages (for papers
 		and demos) and ONE page (for abstracts) in length.
-		Videos can be submitted in HTML or MPEG format. Paper
-		and demo submissions will be reviewed by the program
+		Videos can be submitted in HTML or MPEG format. Submissions will be reviewed by the program
 		committee which will make acceptance and rejection
-		decisions. Final versions of accepted papers will be
+		decisions. Final versions of accepted submissions will be
 		published in the electronic proceedings of the CIDR
-		conference. The final versions of accepted papers
+		conference. The final versions of accepted papers and demos
 		have no page limit and can be significantly expanded
 		from the submitted form. At least one author of an
 		accepted paper or demo will be expected to attend the
@@ -197,18 +194,10 @@ href="https://cmt.research.microsoft.com/CIDR2017">https://cmt.research.microsof
 		the program committee reserves the right to select
 		the co-author who should present the paper at the
 		conference as a condition of acceptance.
-		<p>
-		Authors of papers on implemented systems are highly
-		encouraged to also submit a one-page demo proposal
-		detailing a 10-minute demonstration of the work to
-		be given at the conference. The demo proposals
-		should be added to the main paper as an appendix.
-		For such paper + demo submissions, the page limit is
-		seven pages.
 	<p>
 		Abstracts will be published on the CIDR 2017 web page (provided the
 		author agrees). Authors of selected abstracts will be invited
-		to give a 5-minute presentation at the gong show at the
+		to give a 5-minute presentation at the
 		conference.
 		
 </div>
