--- a/cidr2017/index.html
+++ b/cidr2017/index.html
@@ -127,9 +127,9 @@ document.write('</div>');
 		  <p>
 		<h3>Important Dates</h3><b>(all deadlines are 11:59pm Pacific Time)</b>
 		<ul> 
-		<li><b>August 21, 2016: Submission deadline for all papers</li>
-		<li><b>October 13, 2016: author notification for regular papers</li>
-		<li><b>November 21, 2016: camera-ready deadline for regular papers</li>
+		<li><b>August 21, 2016: Submission deadline for all submissions</li>
+		<li><b>October 13, 2016: author notification for all submissions</li>
+		<li><b>November 21, 2016: camera-ready deadline for all submissions</li>
 		<li><b>January 8-11, 2017: conference</li>
 		<ul>
                 
@@ -143,7 +143,6 @@ document.write('</div>');
 	<div id="footer">
 	  <p><span>&copy; 2012 <a href="index.html#">CIDR Conference</a></span><br />
 	    Template design by <a href="http://andreasviklund.com/">Andreas Viklund</a><br />
-	    Header pictures by <a href=""></a></p>
 	</div>
 
 </div>
