--- a/cidr2017/registration.html
+++ b/cidr2017/registration.html
@@ -116,7 +116,7 @@ document.write('</div>');
                  -->
 		
 <ul>
-<li><strong>Before October 27, 2016</strong>:  early registration for authors of abstracts and submitted papers.
+<li><strong>Before October 27, 2016</strong>:  early registration for authors of abstracts and submitted papers and demos.
 <li><strong>After October 27, 2016</strong>:  registration on  first come first serve basis until capacity filled.
 </ul>
 <p>
