--- a/cidr2017/registration.html
+++ b/cidr2017/registration.html
@@ -1,100 +1,161 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Your description goes here" />
-	<meta name="keywords" content="your,keywords,goes,here" />
-	<meta name="author" content="Your Name" />
-	<link rel="stylesheet" type="text/css" href="andreas01.css" media="screen,projection" />
-	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-	<title>CIDR 2017 - Registration</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta name="description" content="Your description goes here" />
+<meta name="keywords" content="your,keywords,goes,here" />
+<meta name="author" content="Your Name" />
+<link rel="stylesheet" type="text/css" href="andreas01.css"
+	media="screen,projection" />
+<link rel="stylesheet" type="text/css"
+	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
+<title>CIDR 2017 - Registration</title>
+
+<script type="text/javascript" src="jquery-1.2.6.min.js"></script>
 <script language="JavaScript">
-
 <!-- This script and many more are available free online at -->
+	// Set up the image files to be used.
 
-<!-- The JavaScript Source!! http://javascript.internet.com -->
+	var theImages = new Array() // do not change this
 
+	// To add more image files, continue with the
 
+	// pattern below, adding to the array.
 
-// Set up the image files to be used.
+	theImages[0] = 'img/Property_Courtyard.jpg'
 
-var theImages = new Array() // do not change this
+	// do not edit anything below this line
 
-// To add more image files, continue with the
+	var p = theImages.length;
 
-// pattern below, adding to the array.
+	var whichImage = Math.round(Math.random() * (p - 1));
 
+	function showImage() {
 
-theImages[0] = 'img/Property_Courtyard.jpg'
+		document.write('<div id="masthead">');
 
-// do not edit anything below this line
+		document
+				.write('<img src="' + theImages[whichImage] + '" alt="" width="760" height="200" /></a>');
 
-var p = theImages.length;
+		document.write('</div>');
 
-var whichImage = Math.round(Math.random()*(p-1));
+	}
+	/*** 
+	 Simple jQuery Slideshow Script
+	 Released by Jon Raasch (jonraasch.com) under FreeBSD license: free to use or modify, not responsible for anything, etc.  Please link out to me if you like it :)
+	 ***/
 
-function showImage(){
+	function slideSwitch() {
+		var $active = $('#slideshow IMG.active');
 
-document.write('<div id="masthead">');
+		if ($active.length == 0)
+			$active = $('#slideshow IMG:last');
 
-document.write('<img src="' + theImages[whichImage] + '" alt="" width="760" height="200" /></a>');
+		// use this to pull the images in the order they appear in the markup
+		var $next = $active.next().length ? $active.next()
+				: $('#slideshow IMG:first');
 
-document.write('</div>');
+		// uncomment the 3 lines below to pull the images in random order
 
+		// var $sibs  = $active.siblings();
+		// var rndNum = Math.floor(Math.random() * $sibs.length );
+		// var $next  = $( $sibs[ rndNum ] );
+
+		$active.addClass('last-active');
+
+		$next.css({
+			opacity : 0.0
+		}).addClass('active').animate({
+			opacity : 1.0
+		}, 1000, function() {
+			$active.removeClass('active last-active');
+		});
+	}
+
+	$(function() {
+		setInterval("slideSwitch()", 5000);
+	});
+</script>
+
+<style type="text/css">
+
+/*** set the width and height to match your images **/
+#slideshow {
+	position: relative;
+	height: 350px;
 }
 
+#slideshow IMG {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 8;
+	opacity: 0.0;
+}
 
-</script>
+#slideshow IMG.active {
+	z-index: 10;
+	opacity: 1.0;
+}
+
+#slideshow IMG.last-active {
+	z-index: 9;
+}
+</style>
 
 
 
 </head>
 
 <body>
-<div id="wrap">
+	<div id="wrap">
 
-	<div id="header">
-		<h1><a href="index.html">CIDR 2017</a></h1>
-		<p>January 8-11, 2017        <span style="padding-left:30px">  Chaminade, California</span></p>
-	</div>
+		<div id="header">
+			<h1>
+				<a href="index.html">CIDR 2017</a>
+			</h1>
+			<p>
+				January 8-11, 2017 <span style="padding-left: 30px">
+					Chaminade, California</span>
+			</p>
+		</div>
 
-<!--
+		<!--
 	<img id="frontphoto" src="img/Property_Courtyard.jpg" width="760" height="200" alt="" />
 -->
-	<script language="JavaScript">
-	  
-	  showImage();
-	  
-	</script>
-	<div id="leftside">
-		<h2 class="hide">Menu:</h2>
-		
-		<ul class="avmenu">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="cfp.html">Call For Papers</a></li>
-			<li><a href="org.html">Organization</a></li>
-			<li><a href="program.html">Program and Papers</a></li>
-			<li><a href="registration.html">Venue and Registration</a></li>
-<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
-			<li><a href="../index.html">Previous Conferences</a>
-				<ul>
-				<li><a href="http://www.cidrdb.org/cidr2015/index.html">CIDR 2015</a></li>
-					<li><a href="http://www.cidrdb.org/cidr2013/index.html">CIDR 2013</a></li>
-                                        <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
-					<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
-					<li><a href="../cidr2007/index.html">CIDR 2007</a></li>
-					<li><a href="../cidr2005/index.html">CIDR 2005</a></li>
-					<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
-				</ul>
-			</li>
-<!--
+		<script language="JavaScript">
+			showImage();
+		</script>
+		<div id="leftside">
+			<h2 class="hide">Menu:</h2>
+
+			<ul class="avmenu">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="cfp.html">Call For Papers</a></li>
+				<li><a href="org.html">Organization</a></li>
+				<li><a href="program.html">Program and Papers</a></li>
+				<li><a href="registration.html">Venue and Registration</a></li>
+				<!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
+				<li><a href="../index.html">Previous Conferences</a>
+					<ul>
+						<li><a href="http://www.cidrdb.org/cidr2015/index.html">CIDR
+								2015</a></li>
+						<li><a href="http://www.cidrdb.org/cidr2013/index.html">CIDR
+								2013</a></li>
+						<li><a href="../cidr2011/index.html">CIDR 2011</a></li>
+						<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
+						<li><a href="../cidr2007/index.html">CIDR 2007</a></li>
+						<li><a href="../cidr2005/index.html">CIDR 2005</a></li>
+						<li><a href="../cidr2003/index.html">CIDR 2003</a></li>
+					</ul></li>
+				<!--
 			<li><a class="current" href="index2.html">2-column layout A</a></li>
 			<li><a href="index3.html">2-column layout B</a></li>
 			<li><a href="print.html">Print stylesheet</a></li>
 -->
-		</ul>
-		
-<!--
+			</ul>
+
+			<!--
 		<div class="announce">
 			<p><p>
 			<h2>Site Updates:</h2>
@@ -102,33 +163,65 @@ document.write('</div>');
 			<p class="textright"><a href="#">Sample link &raquo;</a></p>
 		</div>
 -->
-	</div>
+		</div>
 
-	<div id="contentwide">
-		<h2>Registration</h2>
+		<div id="contentwide">
+			<h2>Registration</h2>
 
-		  
- <p>
- <!--
+
+			<p>
+				<!--
 		  <h3>
                   <b> The conference is sold out. We can no longer accept registrations. </b> 
                  </h3>
                  -->
-		
-<ul>
-<li><strong>Before October 27, 2016</strong>:  early registration for authors of abstracts and submitted papers and demos.
-<li><strong>After October 27, 2016</strong>:  registration on  first come first serve basis until capacity filled.
-</ul>
-<p>
-		  CIDR 2017 will be held at <a href="http://www.chaminade.com">Chaminade Resort & Spa</a>, a mountaintop hotel on 300 acres in Santa Cruz, California. Chaminade is a 75 minute drive from San Francisco airport and just 45 minutes from San Jose airport. Chaminade features modern, spacious guest rooms in eleven villas nestled among eucalyptus and redwood forests. The resort includes a fitness center, pool, hot tub, spa services, hiking trails and tennis. The conference center has sweeping views of Monterey Bay and the Santa Cruz mountains. It is a relatively small resort so CIDR will occupy most, if not all, of the space.
-</p>
-<p>
-A single website will be provided for CIDR 2017 registration and lodging. Day rates (i.e., no lodging) may be offered as our budget permits. Some double rooms will be available. We expect registration fees to be the same or slightly less than CIDR 2015. Registration includes all meals and three nights lodging. Chaminade offers award-winning food and can accommodate vegetarian and special diets. The registration website will become available in late summer.
-</p>
-<p>
-There is no direct public transportation to Chaminade. However, taxis are available from downtown Santa Cruz which is 3 miles away.
-</p>		  
-<!--
+
+				<ul>
+					<li><strong>Before October 27, 2016</strong>: early
+						registration for authors of abstracts and submitted papers and
+						demos.
+						<li><strong>After October 27, 2016</strong>: registration on
+							first come first serve basis until capacity filled.
+				</ul>
+				<p>
+					CIDR 2017 will be held at <a href="http://www.chaminade.com">Chaminade
+						Resort & Spa</a>, a mountaintop hotel on 300 acres in Santa Cruz,
+					California. Chaminade is a 75 minute drive from San Francisco
+					airport and just 45 minutes from San Jose airport. Chaminade
+					features modern, spacious guest rooms in eleven villas nestled
+					among eucalyptus and redwood forests. The resort includes a fitness
+					center, pool, hot tub, spa services, hiking trails and tennis. The
+					conference center has sweeping views of Monterey Bay and the Santa
+					Cruz mountains. It is a relatively small resort so CIDR will occupy
+					most, if not all, of the space.
+				</p>
+				<div id="slideshow" position="center">
+					<img src="img/image1.jpg" alt="Slideshow Image 1" width="580"
+						height="300" class="active" /> 
+					<img src="img/image2.jpg"
+						alt="Slideshow Image 2" width="580" height="300" /> 
+					<img
+						src="img/image3.jpg" alt="Slideshow Image 3" width="580"
+						height="300" /> 
+					<img src="img/image4.jpg" alt="Slideshow Image 4"
+						width="580" height="300" />
+				</div>
+			<p>A single website will be provided for CIDR 2017 registration
+				and lodging. Day rates (i.e., no lodging) may be offered as our
+				budget permits. Some double rooms will be available. We expect
+				registration fees to be the same or slightly less than CIDR 2015.
+				Registration includes all meals and three nights lodging. Chaminade
+				offers award-winning food and can accommodate vegetarian and special
+				diets. The registration website will become available in late
+				summer.</p>
+			<p>There is no direct public transportation to Chaminade.
+				However, taxis are available from downtown Santa Cruz which is 3
+				miles away.</p>
+
+
+
+
+			<!--
 <TABLE cellpadding="2" cellspacing="0">
 <TR id="row1">
 <TD><b>Private Room (Historic)</b></TD>  <TD>$847.43 per person 
@@ -160,12 +253,16 @@ See the registration form for details and for prices for non-participant guests.
 <p>
 <b>Reservation deadline is December 4th, 2014. Please note that space is limited and provided on a first-come-first-served basis.</b>
 -->
-	</div>
 
-	<div id="footer">
-		<p><span>&copy; 2012 <a href="registration.html#">CIDR Conference</a></span><br />
-		Template design by <a href="http://andreasviklund.com/">Andreas Viklund</a></p>
+		</div>
+
+		<div id="footer">
+			<p>
+				<span>&copy; 2012 <a href="registration.html#">CIDR
+						Conference</a></span><br /> Template design by <a
+					href="http://andreasviklund.com/">Andreas Viklund</a>
+			</p>
+		</div>
 	</div>
-</div>
 </body>
 </html>
