--- a/cidr2017/org.html
+++ b/cidr2017/org.html
@@ -70,12 +70,12 @@
 		</ul>
 		<h3>Local Arrangement Chair</h3>
 		<ul> 
-		<li><b>Kevin Wilkinson</b>, HP</li>
+		<li><b>Kevin Wilkinson</b>, HPE</li>
 		</ul>
 		
                  <h3>Program Committee Chairs</h3>
 		<ul> 
-		<li><b>Donald Kossmann</b>, ETH Zurich</li>
+		<li><b>Donald Kossmann</b>, Microsoft</li>
 		<li><b>Magdalena Balazinska</b>, University of Washington</li>
 		<li><b>Michael Stonebraker</b>, MIT</li>
 		</ul> 
