fixed header in cfp

--- a/cidr2017/cfp.html
+++ b/cidr2017/cfp.html
@@ -9,7 +9,7 @@
 	media="screen,projection" />
 <link rel="stylesheet" type="text/css"
 	href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-<title>CIDR 2015 - Call For Papers</title>
+<title>CIDR 2017 - Call For Papers</title>
 </head>
 
 <body>
@@ -17,10 +17,10 @@
 
 <div id="header">
 	<h1>
-<a href="index.html">CIDR 2015</a>
+<a href="index.html">CIDR 2017</a>
 	</h1>
 	<p>
-January 4-7, 2015 <span style="padding-left: 30px"> Asilomar,
+January 8-11, 2017 <span style="padding-left: 30px"> Chaminade,
 	California</span>
 	</p>
 </div>
