--- a/cidr2017/registration.html
+++ b/cidr2017/registration.html
@@ -197,26 +197,82 @@
 				</p>
 				<div id="slideshow" position="center">
 					<img src="img/image1.jpg" alt="Slideshow Image 1" width="580"
-						height="300" class="active" /> 
-					<img src="img/image2.jpg"
-						alt="Slideshow Image 2" width="580" height="300" /> 
-					<img
+						height="300" class="active" /> <img src="img/image2.jpg"
+						alt="Slideshow Image 2" width="580" height="300" /> <img
 						src="img/image3.jpg" alt="Slideshow Image 3" width="580"
-						height="300" /> 
-					<img src="img/image4.jpg" alt="Slideshow Image 4"
+						height="300" /> <img src="img/image4.jpg" alt="Slideshow Image 4"
 						width="580" height="300" />
 				</div>
-			<p>A single website will be provided for CIDR 2017 registration
-				and lodging. Day rates (i.e., no lodging) may be offered as our
-				budget permits. Some double rooms will be available. We expect
-				registration fees to be the same or slightly less than CIDR 2015.
-				Registration includes all meals and three nights lodging. Chaminade
-				offers award-winning food and can accommodate vegetarian and special
-				diets. The registration website will become available in late
-				summer.</p>
+
+				<h3>Registration Options</h3>
+
+				<ul>
+					<li>Regular registration: single room is $1,125, shared room
+						is $805</li>
+
+					<li>Student registration: single room is $1,025, shared room
+						is $705</li>
+				</ul>
+			<p>Rooms have either a single, king bed or two double beds.</p>
+			<p>The registration fee covers lodging for three nights, from
+				Sunday, Jan. 8 to Wednesday, Jan. 11 plus food during the
+				conference. <b>If you must arrive late or leave early, you will still
+				be charged for the entire conference.</b> There is no day rate, i.e., no
+				option for lodging off-site.</p>
+			<p>For attendees who wish to stay longer, i.e., arrive before
+				Jan. 8 or depart after Jan. 11, a special rate is available but you
+				must contact Chaminade to make arrangements. Similarly, a special
+				rate is available for family members or guests who accompany
+				attendees. Contact Chaminade for details.</p>
 			<p>There is no direct public transportation to Chaminade.
 				However, taxis are available from downtown Santa Cruz which is 3
 				miles away.</p>
+			<h3>Registration Instructions</h3>
+			<p>Connect to the Chaminade registration page for regular
+				attendees or students using one of the links below.
+				Check-in/Check-out: Specify your arrival and departure dates. As
+				mentioned above, if you arrive late or leave early, you will still
+				be charged for the full conference upon check-out and departure from
+				the Chaminade resort.</p>
+
+			<ul>
+				<li>Rooms: specify 1</li>
+
+				<li>Adults: specify 1</li>
+			</ul>
+			<p>Shared rooms: if you want to share a room with another CIDR
+				2017 attendee, you should first find a roommate on your own (CIDR
+				does not provide a matching service). Then, register for a single
+				room (choose a king or double bed as you wish) and inform Chaminade
+				the name of your roommate. You may call or email them or specify the
+				name in the Comments section under Special Requests. Discount code:
+				there is no discount code</p>
+
+			<p>
+				<b>Note about Total Charges:</b> due to limitations with the
+				Chaminade website, the total charges shown on the registration page
+				do NOT match what you will be charged at check-out upon departure
+				from Chaminade. For example, shared room attendees will see total
+				charges for a single room. Charges for private room attendees will
+				be close to the correct number but will be a little low. So, do not
+				be alarmed by the number shown for Total Charges. It will be
+				corrected at check-out.
+			</p>
+
+			<p>Please follow the appropriate link for the registration.</p>
+			<ul>
+				<li><a
+					href="http://bookings.ihotelier.com/bookings.jsp?groupID=1564586&hotelID=15334">Regular
+						registration</a></li>
+				<li><a
+					href="http://bookings.ihotelier.com/bookings.jsp?groupID=1714620&hotelID=15334">Student
+						registration</a></li>
+			</ul>
+			<p>
+				Questions, concerns, comments: contact <a
+					href="mailto:kevinwilkinson1@acm.org">Kevin Wilkinson</a> (CIDR
+				Local Arrangments)
+			</p>
 
 
 
@@ -253,7 +309,6 @@ See the registration form for details and for prices for non-participant guests.
 <p>
 <b>Reservation deadline is December 4th, 2014. Please note that space is limited and provided on a first-come-first-served basis.</b>
 -->
-
 		</div>
 
 		<div id="footer">
