--- a/cidr2017/program.html
+++ b/cidr2017/program.html
@@ -57,17 +57,18 @@
 	</div>
 
 	<div id="contentwide"> 
-	 
-
-	  <p>
-          The keynote speaker: TBD
-	
 	  
-          <p>
-	  <b>Gongshow Awards:  will be announced here</b><p>
           
 	 <h3>CIDR 2017 Program: TENTATIVE/CHANGES POSSIBLE</h3>
-TBD
+	 <p><b>Gongshow Awards:  will be announced here</b></p>
+<iframe src="CIDR-sessions.html"
+	width="600"              // width of iframe should match the width of containing div
+	height="5500"             // height of iframe should match the height of containing div
+	marginwidth="2"          // width of iframe margin
+	marginheight="2"         // height of iframe margin   
+	frameborder="no"         // frame border preference
+	scrolling="no"          // instructs iframe to scroll overflow content
+	</iframe>
 	  
 	 
 </div>
