--- a/cidr2017/cfp.html
+++ b/cidr2017/cfp.html
@@ -199,7 +199,12 @@ href="https://cmt.research.microsoft.com/CIDR2017">https://cmt.research.microsof
 		author agrees). Authors of selected abstracts will be invited
 		to give a 5-minute presentation at the
 		conference.
-		
+
+<h3>Formatting guidelines</h3>
+<p>
+Camera-ready papers need to include the following copyright notice at the bottom left of the first page. The<a href="cidr-2017.cls" download> latex style file</a> includes the copyright notice. We recommend that you use it, which will display the following information:
+<p>
+<i>This article is published under a Creative Commons Attribution License(http://creativecommons.org/licenses/by/3.0/), which permits distribution and reproduction in any medium as well as allowing derivative works, provided that you attribute the original work to the author(s) and CIDR 2017. 8th Biennial Conference on Innovative Data Systems Research (CIDR ’17). January 8-11, 2017, Chaminade, California, USA.</i>
 </div>
 
 <div id="footer">
