--- a/cidr2017/gongshow.html
+++ b/cidr2017/gongshow.html
@@ -99,7 +99,7 @@
 </tr>
 <tr>
     <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
-    <td class="paper-info"><b>How to Talk to People at Conferences</b><BR/>Mark Callaghan (Facebook)</td>
+    <td class="paper-info"><b>Predictive Provisioning: A Progress Report</b><BR/>Becca Taft (MIT)</td>
 </tr></table>
 
 <p><h3 id="tuesday">Tuesday January 10th</h3>
@@ -132,6 +132,10 @@
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2017_117.pdf" title="Event Evolution and Archiving"><img src="gongshow/img/paper117.png" /></a></td>
     <td class="paper-info"><b>Event Evolution and Archiving</b><BR/>Omar Alonso (<em>Microsoft</em>)</td>
+</tr>
+<tr>
+    <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
+    <td class="paper-info"><b>How to Talk to People at Conferences</b><BR/>Mark Callaghan (Facebook)</td>
 </tr></table>
 
 <hr>
