--- a/cidr2017/program.html
+++ b/cidr2017/program.html
@@ -67,7 +67,7 @@
 	marginwidth="2"          // width of iframe margin
 	marginheight="2"         // height of iframe margin   
 	frameborder="no"         // frame border preference
-	scrolling="no"          // instructs iframe to scroll overflow content
+	scrolling="yes"          // instructs iframe to scroll overflow content
 	</iframe>
 	  
 	 
