--- a/cidr2017/program.html
+++ b/cidr2017/program.html
@@ -62,7 +62,7 @@
 	 <h3>CIDR 2017 Program: TENTATIVE/CHANGES POSSIBLE</h3>
 	 <p><b>Gongshow Awards:  will be announced here</b></p>
 <iframe src="CIDR-sessions.html"
-	width="600"              // width of iframe should match the width of containing div
+	width="600"             
 	height="5500"             // height of iframe should match the height of containing div
 	marginwidth="2"          // width of iframe margin
 	marginheight="2"         // height of iframe margin   
