--- a/cidr2017/gongshow.html
+++ b/cidr2017/gongshow.html
@@ -98,8 +98,8 @@
     <td class="paper-info"><b>Predictive Provisioning: A Progress Report</b><BR/>Becca Taft (MIT)</td>
 </tr>
 <tr>
-    <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
-    <td class="paper-info"><b>How to Talk to People at Conferences</b><BR/>Mark Callaghan (Facebook)</td>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2017_47.pdf" title="Hybrid: A Large-scale In-memory Image Analytics Engine"><img src="gongshow/img/paper47.png" /></a></td>
+    <td class="paper-info"><b>Hybrid: A Large-scale In-memory Image Analytics Engine</b><BR/>Michael Gubanov (<em>University of Texas, San Anton</em>)</td>
 </tr></table>
 
 <p><h3 id="tuesday">Tuesday January 10th</h3>
@@ -108,10 +108,6 @@
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2017_74.pdf" title="Dial M for Management: Next Generation NoSQL"><img src="gongshow/img/paper74.png" /></a></td>
     <td class="paper-info"><b>Dial M for Management: Next Generation NoSQL</b><BR/>Kathryn Dahlgren (<em>UC Santa Cruz</em>)</td>
-</tr>
-<tr>
-    <td class="paper-url"><a href="gongshow/abstracts/cidr2017_77.pdf" title="Neuromorphic Hardware As Database Co-Processors"><img src="gongshow/img/paper77.png" /></a></td>
-    <td class="paper-info"><b>Neuromorphic Hardware As Database Co-Processors</b><BR/>Thomas Heinis (<em>Imperial College Imperial</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2017_67.pdf" title="The Automatic Scientist will be a Data System"><img src="gongshow/img/paper67.png" /></a></td>
@@ -132,6 +128,14 @@
 <tr>
     <td class="paper-url"><a href="gongshow/abstracts/cidr2017_117.pdf" title="Event Evolution and Archiving"><img src="gongshow/img/paper117.png" /></a></td>
     <td class="paper-info"><b>Event Evolution and Archiving</b><BR/>Omar Alonso (<em>Microsoft</em>)</td>
+</tr>
+<tr>
+    <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
+    <td class="paper-info"><b>How to Talk to People at Conferences</b><BR/>Mark Callaghan (Facebook)</td>
+</tr>
+<tr>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2017_109.pdf" title="CIDR: Chat-oriented Innovations in Database Research"><img src="gongshow/img/paper109.png" /></a></td>
+    <td class="paper-info"><b>CIDR: Chat-oriented Innovations in Database Research</b><BR/>Eugene WU (<em>Columbia University</em>)</td>
 </tr>
 <tr>
     <td class="paper-url"><img src="gongshow/img/missing.png" /></td>
@@ -165,10 +169,6 @@
 <tr valign="top">
     <td class="paper-url"><a href="gongshow/abstracts/cidr2017_61.pdf" title="Secure Data Systems and Performance: Friends or Foe?"><i class="fa fa-file-pdf-o fa-lg"></i></a></td>
     <td class="paper-info"><b>Secure Data Systems and Performance: Friends or Foe?</b><BR/>Manos Athanassoulis (<em>Harvard SEAS</em>)</td>
-</tr>
-<tr valign="top">
-    <td class="paper-url"><a href="gongshow/abstracts/cidr2017_109.pdf" title="CIDR: Chat-oriented Innovations in Database Research"><i class="fa fa-file-pdf-o fa-lg"></i></a></td>
-    <td class="paper-info"><b>CIDR: Chat-oriented Innovations in Database Research</b><BR/>Eugene WU (<em>Columbia University</em>)</td>
 </tr>
 <tr valign="top">
     <td class="paper-url"><a href="gongshow/abstracts/cidr2017_64.pdf" title="We Are Boring"><i class="fa fa-file-pdf-o fa-lg"></i></a></td>
@@ -231,8 +231,8 @@
     <td class="paper-info"><b>Treating Microservices as a Unifed, Distributed Database</b><BR/>Brennan Saeta (<em>Coursera Inc</em>)</td>
 </tr>
 <tr valign="top">
-    <td class="paper-url"><a href="gongshow/abstracts/cidr2017_47.pdf" title="Hybrid: A Large-scale In-memory Image Analytics Engine"><i class="fa fa-file-pdf-o fa-lg"></i></a></td>
-    <td class="paper-info"><b>Hybrid: A Large-scale In-memory Image Analytics Engine</b><BR/>Michael Gubanov (<em>University of Texas, San Anton</em>)</td>
+    <td class="paper-url"><a href="gongshow/abstracts/cidr2017_77.pdf" title="Neuromorphic Hardware As Database Co-Processors"><i class="fa fa-file-pdf-o fa-lg"></i></a></td>
+    <td class="paper-info"><b>Neuromorphic Hardware As Database Co-Processors</b><BR/>Thomas Heinis (<em>Imperial College Imperial</em>)</td>
 </tr>
 <tr valign="top">
     <td class="paper-url"><a href="gongshow/abstracts/cidr2017_88.pdf" title="Stop the Truthiness and Just Be Wrong"><i class="fa fa-file-pdf-o fa-lg"></i></a></td>
