--- a/cidr2017/program.html
+++ b/cidr2017/program.html
@@ -59,8 +59,9 @@
 	<div id="contentwide"> 
 	  
           
-	 <h3>CIDR 2017 Program: TENTATIVE/CHANGES POSSIBLE</h3>
-	 <p><b>Gongshow Awards:  will be announced here</b></p>
+	 <h3>CIDR 2017 Program: </h3>
+	 <p><b>Gongshow Awards:  Michael J. Franklin (University of Chicago) with "Mike Franklin Spits Fire
+"</b></p>
 <iframe src="CIDR-sessions.html"
 	width="600"              // width of iframe should match the width of containing div
 	height="5500"             // height of iframe should match the height of containing div
