fixed sentence on index main page

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ CIDR
   <p class=MsoNormal>The first CIDR conference was first held at Asilomar in January 2003, and
   has been held every other January since then. 
   <span style="mso-spacerun:
-  yes">&nbsp;&nbsp; </span> <b> The conference will be held for a seventh time
-  January 4-7, 2015 at Asilomar. </b> </p>
+  yes">&nbsp;&nbsp; </span> <b> The conference will be held for an eighth time
+  January 8-11, 2017 at Chaminade. </b> </p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
