--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ CIDR
   has been held every other January since then. 
   <span style="mso-spacerun:
   yes">&nbsp;&nbsp; </span> <b> The conference will be held for an nineth time
-  January 13-16, 2019 at Chaminade. </b> </p>
+  January 13-16, 2019 at Asilomar. </b> </p>
   <p class=MsoNormal><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></p>
   </td>
  </tr>
@@ -209,6 +209,23 @@ CIDR
   <p class=MsoNormal><b>Website<o:p></o:p></b></p>
   </td>
  </tr>
+ <tr>
+  <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
+  border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal>2019</p>
+  </td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+ <p class=MsoNormal><a href="cidr2019/cfp.html">Call for Papers</a></p></td>
+  <td width=148 valign=top style='width:2.05in;border-top:none;border-left:
+  none;border-bottom:solid windowtext .5pt;border-right:solid windowtext .5pt;
+  mso-border-top-alt:solid windowtext .5pt;mso-border-left-alt:solid windowtext .5pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p class=MsoNormal><a href="cidr2019/index.html">2019 website</a></p>
+  </td>
+ </tr>
   <tr>
   <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
   border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
@@ -226,6 +243,7 @@ CIDR
   <p class=MsoNormal><a href="cidr2017/index.html">2017 website</a></p>
   </td>
  </tr>
+ 
  <tr>
   <td width=148 valign=top style='width:2.05in;border:solid windowtext .5pt;
   border-top:none;mso-border-top-alt:solid windowtext .5pt;padding:0in 5.4pt 0in 5.4pt'>
