--- a/cidr2019/index.html
+++ b/cidr2019/index.html
@@ -7,7 +7,7 @@
 	<meta name="author" content="Jena Bakula" />
 	<link rel="stylesheet" type="text/css" href="andreas01.css" media="screen,projection" />
 	<link rel="stylesheet" type="text/css" href="http://www.cidrdb.org/cidr2013/print.css" media="print" />
-	<title>CIDR 2017</title>
+	<title>CIDR 2019</title>
 <script language="JavaScript">
 
 <!-- This script and many more are available free online at -->
@@ -25,7 +25,7 @@ var theImages = new Array() // do not change this
 // pattern below, adding to the array.
 
 
-theImages[0] = 'img/Property_Courtyard.jpg'
+theImages[0] = 'img/asilomar.jpg'
 
 // do not edit anything below this line
 
