--- a/cidr2019/cfp.html
+++ b/cidr2019/cfp.html
@@ -94,11 +94,10 @@ contributions
 
 	<h3>Registration</h3>
 	<ul>
-<!--<li><strong>Before October 27, 2016</strong>: early
+<li><strong>Before November 5, 2018</strong>: early
 	registration for authors of abstracts and submitted papers and demos.
-	<li><strong>After October 27, 2016</strong>:
+	<li><strong>After November 5, 2018</strong>:
 registration on first come first serve basis until capacity is reached.
--->
 	</ul>
 	
 
@@ -146,11 +145,11 @@ co-operation with the organizing committee.
 The number of participants at CIDR is limited to allow an
 intimate single-track experience. In the past, CIDR
 reached maximum capacity several weeks before the
-conference. As in 2015 registration for the 2017
+conference. As in the past, registration for the 2019
 conference will be carried out in two phases. Authors who
 submitted an abstract or co-authored a paper or demo
-submission are invited to register before October 27
-(independent of acceptance). After October 27,
+submission are invited to register before November 5th
+(independent of acceptance). After November 5th,
 registration is on a first-come-first-serve basis until
 the conference capacity is reached. So, if you plan to
 attend the conference, please, submit at least an
@@ -165,11 +164,11 @@ abstract.
 <p>
 	<b>Papers should be electronically submitted in pdf
 format to <a
-href="https://cmt.research.microsoft.com/CIDR2019">https://cmt.research.microsoft.com/CIDR2019</a>.
+href="https://cmt3.research.microsoft.com/CIDR2019">https://cmt.research.microsoft.com/CIDR2019</a>.
 	</b>
 	<p>
 		Topics of interest include but are not limited to:
-		database systems, storage management, cloud computing,
+		database systems, storage management, transaction processing, cloud computing,
 		massive data analysis, software service
 		infrastructure, scalability and dependability,
 		embedded and sensor databases, user interfaces,
