--- a/cidr2019/index.html
+++ b/cidr2019/index.html
@@ -125,7 +125,7 @@ document.write('</div>');
 
 				  
 		<p>
-		  The conference will be held again at the Asilomar Conference Grounds on the Pacific Ocean just south of Monterey, CA.  Chaminade is slightly cheaper, has better food, better rooms, and is 45 minutes closer to SFO.  The conference will be similar to past years with a single-tracked program of keynotes, paper and demo presentations, panels, a gong-show and plenty of time for interaction.
+		  The conference will be held again at the Asilomar Conference Grounds on the Pacific Ocean just south of Monterey, CA. The conference will be similar to past years with a single-tracked program of keynotes, paper and demo presentations, panels, a gong-show and plenty of time for interaction.
 		  <p>
 		<h3>Important Dates</h3><b>(all deadlines are 11:59pm Pacific Time)</b>
 		<ul> 
