title picture added

--- a/cidr2019/registration.html
+++ b/cidr2019/registration.html
@@ -22,7 +22,7 @@
 
 	// pattern below, adding to the array.
 
-	theImages[0] = 'img/Property_Courtyard.jpg'
+	theImages[0] = 'img/hero-secondary-lg.jpg'
 
 	// do not edit anything below this line
 
