--- a/cidr2015/index.html
+++ b/cidr2015/index.html
@@ -80,7 +80,7 @@ document.write('</div>');
 			<li><a href="http://www.visitasilomar.com">Venue Information</a></li>
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
-					<li><a href="http://www.cidrdb.org/cidr2013/index.html">
+					<li><a href="../cidr2013/index.html">
                                          CIDR 2013</a></li>
                                         <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
 					<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
