--- a/cidr2017/index.html
+++ b/cidr2017/index.html
@@ -79,9 +79,9 @@ document.write('</div>');
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
-				<li><a href="http://www.cidrdb.org/cidr2015/index.html">
+				<li><a href="../cidr2015/index.html">
                                          CIDR 2015</a></li>
-					<li><a href="http://www.cidrdb.org/cidr2013/index.html">
+					<li><a href="../cidr2013/index.html">
                                          CIDR 2013</a></li>
                                         <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
 					<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
