fixed link to ace template

--- a/cidr2019/cfp.html
+++ b/cidr2019/cfp.html
@@ -181,7 +181,7 @@ href="https://cmt3.research.microsoft.com/CIDR2019">https://cmt.research.microso
 	<p> 
 		Submissions must be
 		formatted using the ACM SIG style. (see  <a
-		href="http://www.acm.org/sigs/publications/proceedings-templates">ACM
+		href="https://www.acm.org/publications/proceedings-template-16dec2016">ACM
 		Template</a>), and must not exceed SIX pages (for papers
 		and demos) and ONE page (for abstracts) in length.
 		Videos can be submitted in HTML or MPEG format. Submissions will be reviewed by the program
