added link to key note page

--- a/cidr2019/cfp.html
+++ b/cidr2019/cfp.html
@@ -32,6 +32,7 @@ January 13-16, 2019 <span style="padding-left: 30px"> Asilomar,
 <li><a href="index.html">Home</a></li>
 <li><a href="cfp.html">Call For Papers</a></li>
 <li><a href="org.html">Organization</a></li>
+<li><a href="keynotespeakers.html">Keynotes</a></li>
 <li><a href="program.html">Program and Papers</a></li>
 			<li><a href="registration.html">Venue and Registration</a></li>
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
