fixed some links

--- a/cidr2019/org.html
+++ b/cidr2019/org.html
@@ -31,11 +31,11 @@
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
-				<li><a href="http://cidrdb.org/cidr2017/index.html">
+				<li><a href="../cidr2017/index.html">
 										CIDR 2017</a></li>
-				<li><a href="http://cidrdb.org/cidr2015/index.html">
+				<li><a href="../cidr2015/index.html">
 										CIDR 2015</a></li>
-					<li><a href="http://cidrdb.org/cidr2013/index.html">
+					<li><a href="../cidr2013/index.html">
                                          CIDR 2013</a></li>
                                         <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
 					<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
@@ -73,7 +73,7 @@
 		</ul>
 		<h3>Local Arrangement Chair</h3>
 		<ul> 
-		<li><b>Kevin Wilkinson</b>, HPE</li>
+		<li><b>Kevin Wilkinson</b></li>
 		</ul>
 		
                  <h3>Program Committee Chairs</h3>
