--- a/cidr2019/index.html
+++ b/cidr2019/index.html
@@ -75,15 +75,17 @@ document.write('</div>');
 			<li><a href="cfp.html">Call For Papers</a></li>
 			<li><a href="org.html">Organization</a></li>
 			<li><a href="program.html">Program and Papers</a></li>
+						<li><a href="keynotespeakers.html">Keynotes</a></li>
+
 			<li><a href="registration.html">Venue and Registration</a></li>
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
-				<li><a href="http://cidrdb.org/cidr2017/index.html">
+				<li><a href="../cidr2017/index.html">
                                          CIDR 2017</a></li>
-				<li><a href="http://cidrdb.org/cidr2015/index.html">
+				<li><a href="../cidr2015/index.html">
                                          CIDR 2015</a></li>
-					<li><a href="http://cidrdb.org/cidr2013/index.html">
+					<li><a href="../cidr2013/index.html">
                                          CIDR 2013</a></li>
                                         <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
 					<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
