--- a/cidr2019/keynotespeakers.html
+++ b/cidr2019/keynotespeakers.html
@@ -31,9 +31,9 @@
 <!--			<li><a href="http://www.chaminade.com">Venue Information</a></li>   -->
 			<li><a href="../index.html">Previous Conferences</a>
 				<ul>
-				<li><a href="http://cidrdb.org/cidr2017/index.html">CIDR 2017</a></li>
-					<li><a href="http://cidrdb.org/cidr2015/index.html">CIDR 2015</a></li>
-                                        <li><a href="http://cidrdb.org/cidr2013/index.html">CIDR 2013</a></li>
+				<li><a href="../cidr2017/index.html">CIDR 2017</a></li>
+					<li><a href="../cidr2015/index.html">CIDR 2015</a></li>
+                                        <li><a href="../cidr2013/index.html">CIDR 2013</a></li>
                                         <li><a href="../cidr2011/index.html">CIDR 2011</a></li>
 					<li><a href="../cidr2009/index.html">CIDR 2009</a></li>
 					<li><a href="../cidr2007/index.html">CIDR 2007</a></li>
